# ai-voice-tool

./: .gitignore  README.md
ai-voice-tool-test/: package.json  pnpm-lock.yaml
ai-voice-tool-test/src/app/: layout.tsx  page.tsx
ai-voice-tool-test/src/app/agents/: page.tsx
ai-voice-tool-test/src/app/agents/(components)/: AgentCard.tsx  AgentsHeader.tsx
ai-voice-tool-test/src/app/agents/[id]/: page.tsx
ai-voice-tool-test/src/app/calls/: page.tsx
ai-voice-tool-test/src/app/calls/(components)/: CallCard.tsx  CallForm.tsx  CallStatusChip.tsx
ai-voice-tool-test/src/app/calls/[id]/: page.tsx
ai-voice-tool-test/src/common/components/: AppTopBar.tsx
ai-voice-tool-test/src/common/hooks/: useCallsData.ts  useWebCallDialog.ts
ai-voice-tool-test/src/components/: ThemeRegistry.tsx  WebCallDialog.tsx
ai-voice-tool-test/src/lib/: api.ts
ai-voice-tool-test/src/lib/audio/: PcmPlayer.ts
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  settings.py
backend/db/: schema.sql  supabase_client.py
backend/models/: schemas.py
backend/routers/: __init__.py  calls.py  configs.py  retell.py
backend/services/: dialog.py  postprocess.py  retell.py
